assets/scss/_layout.scss
//
// General
//

* {
  box-sizing: border-box;
}

body {
  background-color: $color-ui-white;
}

//
// Header
//

body > header {
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: stretch;
  height: 88px;
  padding: 0 24px;

  @include media(">sm") {
    height: 152px;
    padding: 0 64px;
  }

  nav {
    position: relative;
    width: 100%;
    height: 32px;

    @include media(">sm") {
      height: 40px
    }
  }

  a {
    position: absolute;
    top: 2px;
    display: block;
    width: 24px;
    height: 24px;
    transition: left 0.5s ease, right 0.5s ease, margin-left 0.5s ease, margin-right 0.5s ease, opacity 0.5s ease;

    &:hover {
      opacity: 0.6;
    }

    svg {
      width: 24px;
      height: 24px;
    }

    @include media(">sm") {
      width: 36px;
      height: 36px;

      svg {
        width: 36px;
        height: 36px;
      }
    }
  }

  .nav-back {
    opacity: 0.3;
  }

  .nav-back-info {
    left: -50%;
  }

  .nav-back-contact {
    right: -50%;
    transform: rotate(180deg);
  }

  .nav-info {
    left: 0;
    opacity: 0.3;
  }

  h1 {
    position: absolute;
    left: 50%;
    width: 177px;
    height: 32px;
    margin: 0 0 0 -88px;
    opacity: 0.6;
    transition: left 0.5s ease, right 0.5s ease, margin-left 0.5s ease, margin-right 0.5s ease, opacity 0.5s ease;

    svg {
      display: block;
      width: 177px;
      height: 32px;
    }

    @include media(">sm") {
      width: 221px;
      height: 40px;
      margin: 0 0 0 -110px;

      svg {
        display: block;
        width: 221px;
        height: 40px;
      }
    }
  }

  .nav-contact {
    opacity: 0.3;
    right: 0;
  }
}

body {

  &.contact {
    h1 {
      left: 0;
      margin-left: 0;
      opacity: 0;

      @include media(">sm") {
        opacity: 1;
      }
    }
    .nav-contact {
      right: 50%;
      margin-right: -18px;
      opacity: 0.6;
    }
    .nav-info {
      left: -50%;
    }
    .nav-back-contact {
      right: 0;
    }

    #base {
      left: -100%;
    }
    #contact {
      left: 0;
    }
  }

  &.info {
    h1 {
      left: 100%;
      margin-left: -221px;
      opacity: 0;
      
      @include media(">sm") {
        opacity: 1;
      }
    }
  
    .nav-contact {
      right: -50%;
    }
  
    .nav-info {
      left: 50%;
      margin-left: -18px;
      opacity: 0.6;
    }
  
    .nav-back-info {
      left: 0;
    }

    #base {
      left: 100%;
    }
    
    #info {
      left: 0;
    }
  }

}

// 
// Sections
// 

main {
  min-height: calc(100vh - 160px);

  @include media(">sm") {
    min-height: calc(100vh - 304px);
  }
}

.content {
  min-height: calc(100vh - 160px);
  width: 100%;
  padding: 24px;
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  transition: left 0.5s ease, right 0.5s ease, margin-left 0.5s ease, margin-right 0.5s ease, opacity 0.5s ease;

  @include media(">sm") {
    padding: 24px 64px;
    min-height: calc(100vh - 304px);
  }
}

#base {
  left: 0;

  .featured {
    margin-top: 16.67%;
    display: flex;
    align-items: center;
    color: $color-ui-black60;
  }

  .dot-name {
    font-size: 3.2rem;
    line-height: 1;
    text-transform: lowercase;
    padding-right: 16px;
  }

  .dot-status {
    font-size: 1.2rem;
    line-height: 2.667;
    text-transform: lowercase;
    padding-left: 16px;
    border-left: 1px solid $color-ui-black40;
  }
}

#contact {
  left: 100%;
}

#info {
  left: -100%;
  display: flex;
  align-items: center;

  p {
    max-width: 640px;;
  }
}

//
// Footer
//

body > footer {
  padding: 24px 32px;
  text-align: center;
  font-size: 1.4rem;
  line-height: 1.714;

  @include media(">sm") {
    padding: 64px;
  }
}

